# kcci

./: .envrc  .envrc.example  .envrc.mac  .gitignore  CLAUDE.md  Cargo.toml  Makefile  Pipfile  README.md  THIRD_PARTY_LICENSES.txt  book_finder.py  db_play.py  kcci  kcci-server.py  kcci-server.spec  loc_search.txt  main.py  openlib.json  pyproject.toml  safari.txt  ss_play.py
.claude/: settings.local.json
.tasks/: .gitattributes  config.yaml
.tasks/blocked/: 392xdz2y.md  d8tr2zqx.md
.tasks/closed/: 8b9x5x0z.md  m5y2zcch.md
.tasks/open/: 0dnkchmp.md  4bxybpba.md  5z6v9r0b.md  d1yfc783.md  d31q8aj6.md  jyn8tq2f.md  m5m78nhv.md  m5y2zcch.md  q0aztkaj.md  q0zd74p9.md  x60y4xx6.md  x9d30pd6.md  z7h5c1kg.md  zp2qhgae.md
api_play/: Open Library API.paw
api_play/openlibrary/: bruno.json  get_go.bru  get_ss_work.bru  get_ss_work2.bru  search_good_omens.bru  search_spinning_silver.bru  search_spinning_silver_2.bru
kcci/: db_play.py  ss_play.py
kcci/tests/: test_db_stuff.py
kindle-exporter/: manifest.json  popup.html  popup.js
scripts/: build-sidecar.sh  export-onnx-model.py  kcci  release.sh  sync-version.sh
src/: ingest.rs  lib.rs  library.rs  main.rs
src-tauri/: Cargo.toml  release.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: amazon_import.rs  commands.rs  embed.rs  enrich.rs  error.rs  import.rs  lib.rs  sync.rs  webarchive.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.sql
src-tauri/src/db/migrations/: v001_initial.sql  v002_drop_cover_percent.sql  v003_rebuild_fts.sql
src/kcci/: book_finder.py  cli.py  db.py  db_play.py  embed.py  enrich.py  ol_dump.py  ss_play.py  sync.py  web.py  webarchive.py
src/kcci/templates/: base.html  book.html  books.html  import.html  index.html
src/kcci/templates/partials/: book_collapsed.html  book_expanded.html  results.html
src/kcci/tests/: test_db_stuff.py
ui/: package-lock.json  package.json
ui/src/: App.svelte  app.css
ui/src/components/: BookCard.svelte  FilterBuilder.svelte  ModelManager.svelte  SearchChips.svelte
ui/src/lib/: api.ts
ui/src/routes/: Browse.svelte  Import.svelte  Search.svelte
