[package]
name = "kcci"
version = "0.1.0"
edition = "2021"
authors = ["Brian McCallister <brianm@skife.org>"]
description = "Build and query indexes of books"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
clap = { version = "4.4.3", features = ["derive"] }
env_logger = "0.10.0"
linked_hash_set = "0.1.4"
log = "0.4.20"
regex = "1.9.5"
rust-bert = "0.21.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
