[package]
name = "kcci"
version = "0.1.0"
edition = "2021"
authors = ["Brian McCallister <brianm@skife.org>"]
description = "Build and query indexes of books"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
http-cache-reqwest = "0.12"
linked_hash_set = "0.1"
log = "0.4"
regex = "1.9"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
reqwest-middleware = "0.2"
rust-bert = "0.21.0"
url = "2.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
