[project]
name = "kcci"
version = "0.1.0"
description = ""
authors = [{ name = "Brian McCallister", email = "brianm@skife.org" }]
readme = "README.md"
dependencies = [
    "sentence-transformers >= 2.2.2",
    "requests >= 2.28.2",
    "httpx >= 0.23.3",
    "click >= 8.1.3",
    "sqlite-vss >= 0.1.2",
    "numpy >= 1.26.2",
    "torch>=2.2.0",
]
requires-python = ">= 3.10"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["black>=24.1.1", "pytest>=8.0.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kcci"]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
