[project]
name = "kcci"
version = "0.1.0"
description = ""
authors = [{ name = "Brian McCallister", email = "brianm@skife.org" }]
readme = "README.md"
dependencies = [
    "sentence-transformers >= 2.2.2",
    "requests >= 2.28.2",
    "httpx >= 0.23.3",
    "click >= 8.1.3",
    "numpy >= 1.26.2",
    "torch>=2.4.0",
    "sqlite-vec>=0.1.6",
    "optimum[onnxruntime]>=2.1.0",
    "onnxruntime>=1.23.2",
    "flask>=3.1.2",
    "markdown>=3.10",
]
requires-python = ">= 3.11"

[project.scripts]
kcci = "kcci.cli:cli"

[dependency-groups]
dev = ["black>=24.1.1", "pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kcci"]
