[package]
name = "ook"
version = "0.3.0"
description = "A personal book catalog with semantic search"
authors = ["Brian McCallister <brianm@skife.org>"]
license = "Apache-2.0"
repository = "https://github.com/brianm/ook"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json", "stream"] }
futures = "0.3"

# Database
rusqlite = { version = "0.37", features = ["bundled"] }
rusqlite_migration = "2.3"
sqlite-vec = "0.1"

# Error handling
thiserror = "2.0"

# ONNX inference (downloads prebuilt binaries at build time)
ort = { version = "2.0.0-rc.10" }
tokenizers = "0.21"
ndarray = "0.16"

# Parsing
plist = "1.7"
regex = "1.11"
urlencoding = "2.1"

# Async
tokio = { version = "1", features = ["sync"] }
